--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -65,7 +65,7 @@
   </div>
   <div class="field">
     <%= f.label :website_url %>
-    <%= f.url_field :website_url, maxlength: 100, placeholder: "https://yoursite.com" %>
+    <%= f.text_field :website_url, maxlength: 100, placeholder: "https://yoursite.com" %>
   </div>
   <div class="field">
     <%= f.label :summary %>
@@ -115,39 +115,39 @@
   </div>
   <div class="field">
     <%= f.label :stackoverflow_url, "Stack Overflow URL" %>
-    <%= f.url_field :stackoverflow_url %>
+    <%= f.text_field :stackoverflow_url %>
   </div>
   <div class="field">
     <%= f.label :linkedin_url, "LinkedIn URL" %>
-    <%= f.url_field :linkedin_url %>
+    <%= f.text_field :linkedin_url %>
   </div>
   <div class="field">
     <%= f.label :behance_url, "Behance URL" %>
-    <%= f.url_field :behance_url %>
+    <%= f.text_field :behance_url %>
   </div>
   <div class="field">
     <%= f.label :dribbble_url, "Dribbble URL" %>
-    <%= f.url_field :dribbble_url %>
+    <%= f.text_field :dribbble_url %>
   </div>
   <div class="field">
     <%= f.label :medium_url, "Medium URL" %>
-    <%= f.url_field :medium_url %>
+    <%= f.text_field :medium_url %>
   </div>
   <div class="field">
     <%= f.label :gitlab_url, "GitLab URL" %>
-    <%= f.url_field :gitlab_url %>
+    <%= f.text_field :gitlab_url %>
   </div>
   <div class="field">
     <%= f.label :instagram_url, "Instagram URL" %>
-    <%= f.url_field :instagram_url %>
+    <%= f.text_field :instagram_url %>
   </div>
   <div class="field">
     <%= f.label :mastodon_url, "Mastodon URL" %>
-    <%= f.url_field :mastodon_url %>
+    <%= f.text_field :mastodon_url %>
   </div>
    <div class="field">
     <%= f.label :twitch_url, "Twitch URL" %>
-    <%= f.url_field :twitch_url %>
+    <%= f.text_field :twitch_url %>
   </div>
   <div class="field">
     <label></label>
